--- a/iframe.html
+++ b/iframe.html
@@ -356,12 +356,23 @@
     console.warn('unable to connect to top frame for connecting dev tools');
   }
 </script>
+<script id="vue-2-datepicker-storybook-app">
+    console.log('--------- preview-head.html ---------')
+</script>
 
-  <script type="module" crossorigin src="./assets/iframe-a9b29f4b.js"></script>
+<style>
+    :root {
+        --css-variable: #fff000;
+    }
+</style>
+  <script type="module" crossorigin src="./assets/iframe-6024efc2.js"></script>
 </head>
 
 <body>
-  <div class="sb-preparing-story sb-wrapper">
+  <script>
+    console.log('--------- preview-body.html ---------')
+</script>
+<div class="sb-preparing-story sb-wrapper">
   <div class="sb-loader"></div>
 </div>
 
